recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: '(' expected but '{' found.
	else if {
                ^Tree:17: error: illegal start of simple expression
}
^